--- a/internship.html
+++ b/internship.html
@@ -41,35 +41,53 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://temicongmbh.recruitee.com/l/en/o/praktikant-mwd-im-bereich-controlling'>
+      Intern in the field of controlling (m/f/d) - temicon GmbH
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://temicongmbh.recruitee.com/l/en/o/praktikant-mwd-im-bereich-operational-excellence'>
+      Intern in the field of operational excellence (m/f/d) - temicon GmbH
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://temicongmbh.recruitee.com/l/en/o/praktikant-mwd-itprojektmanagementadministration'>
+      Intern in the field of IT projectmanagement and administration (m/f/d) - temicon GmbH
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='http://HUMANCARESYSTEMS.recruiterbox.com/jobs/fk03mai'>
     Software Quality Assurance Intern at Humancaresystems
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='http://HUMANCARESYSTEMS.recruiterbox.com/jobs/fk03maz'>
     Program Management Intern at Humancaresystems
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='http://zalora.applytojob.com/apply/uEVyBvPr0O/Partnership-Intern'>Partnership Intern - ZALORA SEA - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='http://zalora.applytojob.com/apply/be9JwBaTkS/Digital-Imaging-Intern'>Digital Imaging Intern - ZALORA SEA - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='http://zalora.applytojob.com/apply/l8kh7gokPy/Intern-Marketplace-Account-Management'>Intern ? Marketplace Account Management - ZALORA SEA - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postman.workable.com/j/69AA5C5A99'>Postman - Jobs: Software Engineer, Intern - Apply online</a></h5> 
+<h5><a href='https://postman.workable.com/j/69AA5C5A99'>Postman - Jobs: Software Engineer, Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -125,7 +143,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692352560-internship-in-the-field-of-platform-engineering-wheel-speed-sensors'>Bosch Group Internship in the field of Platform Engineering Wheel Speed Sensors | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692352560-internship-in-the-field-of-platform-engineering-wheel-speed-sensors'>Bosch Group Internship in the field of Platform Engineering Wheel Speed Sensors | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -171,7 +189,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://evbox.recruitee.com/o/pr-and-marketing-intern-nyc'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://evbox.recruitee.com/o/pr-and-marketing-intern-nyc'>
       PR and Marketing Intern (NYC) - EVBox
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -217,7 +235,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
+<h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -271,7 +289,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nutanix/job/o8ejafwz'>Nutanix Careers - HR Compensation Intern (Fall Internship)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nutanix/job/o8ejafwz'>Nutanix Careers - HR Compensation Intern (Fall Internship)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -297,7 +315,7 @@ or?...</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://newamerica.applytojob.com/apply/BFdhFV9ckr/Fall-2019-Political-Reform-Internship-Paid'>Fall 2019 - Political Reform Internship (Paid) - New America - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://newamerica.applytojob.com/apply/BFdhFV9ckr/Fall-2019-Political-Reform-Internship-Paid'>Fall 2019 - Political Reform Internship (Paid) - New America - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -349,7 +367,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lumc.recruitee.com/l/nl/o/postdoc-interne-geneeskunde-b19mbeo72'>
+<h5><a href='https://lumc.recruitee.com/l/nl/o/postdoc-interne-geneeskunde-b19mbeo72'>
       Postdoc Interne Geneeskunde  (B.19.MB.EO.72) - LUMC
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -369,7 +387,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -466,18 +484,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <hr/>
 <h5><a href='https://jobs.jobvite.com/apco/job/oWuCafwW'>APCO Worldwide Careers - Intern, Finance - Fall 2019</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/nice-systems-old/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787199'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787205'>Job Application for Channel Sales Intern at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
